build-logs/build-hsignal-0.2.7.5.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - hsignal-0.2.7.5 (lib) (first run)
Configuring library for hsignal-0.2.7.5...
Preprocessing library for hsignal-0.2.7.5...
Building library for hsignal-0.2.7.5...
[1 of 6] Compiling Numeric.Signal.Internal

lib/Numeric/Signal/Internal.hs:253:40: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
253 | freqz :: (Filterable a, Complex Double ~ ComplexOf (DoubleOf a)
    |                                        ^
[2 of 6] Compiling Numeric.Signal

lib/Numeric/Signal.hs:97:42: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
   |
97 | broadband_fir :: (S.Filterable a, Double ~ DoubleOf a, Convert (Complex a)) =>
   |                                          ^

lib/Numeric/Signal.hs:111:45: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
111 | broadband_filter :: (S.Filterable a, Double ~ DoubleOf a) 
    |                                             ^

lib/Numeric/Signal.hs:123:41: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
123 | standard_fir :: (S.Filterable a, Double ~ DoubleOf a, Convert (Complex a)) => 
    |                                         ^

lib/Numeric/Signal.hs:136:37: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
136 |       , Convert (Complex a), Double ~ DoubleOf a) =>
    |                                     ^

lib/Numeric/Signal.hs:176:27: warning: [GHC-62161] [-Wincomplete-uni-patterns]
    Pattern match(es) are non-exhaustive
    In a pattern binding:
        Patterns of type ‘Maybe Int’ not matched: Nothing
    |
176 | interpolate' x y xp = let Just j = L.findIndex (> xp) x
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

lib/Numeric/Signal.hs:189:35: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
189 | freqzF :: (S.Filterable a, Double ~ DoubleOf a, S.Filterable (DoubleOf a)) => 
    |                                   ^

lib/Numeric/Signal.hs:198:35: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
198 | freqzN :: (S.Filterable a, Double ~ DoubleOf a) =>
    |                                   ^

lib/Numeric/Signal.hs:271:43: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
271 | cross_spectrum :: (S.Filterable a, Double ~ DoubleOf a) =>
    |                                           ^
[3 of 6] Compiling Numeric.Signal.Multichannel

lib/Numeric/Signal/Multichannel.hs:315:35: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
315 | filter :: (S.Filterable a, Double ~ DoubleOf a) => 
    |                                   ^

lib/Numeric/Signal/Multichannel.hs:334:39: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
334 | histograms :: (S.Filterable a, Double ~ DoubleOf a) =>
    |                                       ^

lib/Numeric/Signal/Multichannel.hs:351:48: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
351 | entropy_delta_phase :: (S.Filterable a, Double ~ DoubleOf a) =>
    |                                                ^

lib/Numeric/Signal/Multichannel.hs:368:37: warning: [GHC-58520] [-Wtype-equality-requires-operators]
    The use of ‘~’ without TypeOperators
    will become an error in a future GHC release.
    Suggested fix: Perhaps you intended to use TypeOperators
    |
368 | mi_phase :: (S.Filterable a, Double ~ DoubleOf a) =>
    |                                     ^
[4 of 6] Compiling Numeric.Signal.EEG.BDF

lib/Numeric/Signal/EEG/BDF.hs:33:1: warning: [-Wdodgy-imports]
    Module ‘Control.Monad.State’ does not export ‘join’
   |
33 | import Control.Monad.State hiding(join)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

lib/Numeric/Signal/EEG/BDF.hs:199:11: warning: [GHC-62161] [-Wincomplete-patterns]
    Pattern match(es) are non-exhaustive
    In an equation for ‘rotate_’:
        Patterns of type ‘[[a]]’ not matched: ([]:_)
    |
199 |     where rotate_ []            = []
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
[5 of 6] Compiling Numeric.Signal.EEG
[6 of 6] Compiling Numeric.Signal.Noise
lib/Numeric/Signal/signal-aux.c: In function ‘filter_double’:

lib/Numeric/Signal/signal-aux.c:75:10: error:
     warning: unused variable ‘K’ [-Wunused-variable]
       75 |   double K = k[0];
          |          ^
   |
75 |   double K = k[0];
   |          ^

lib/Numeric/Signal/signal-aux.c:74:10: error:
     warning: unused variable ‘L’ [-Wunused-variable]
       74 |   double L = l[0];
          |          ^
   |
74 |   double L = l[0];
   |          ^
lib/Numeric/Signal/signal-aux.c: In function ‘filter_float’:

lib/Numeric/Signal/signal-aux.c:99:9: error:
     warning: unused variable ‘K’ [-Wunused-variable]
       99 |   float K = k[0];
          |         ^
   |
99 |   float K = k[0];
   |         ^

lib/Numeric/Signal/signal-aux.c:98:9: error:
     warning: unused variable ‘L’ [-Wunused-variable]
       98 |   float L = l[0];
          |         ^
   |
98 |   float L = l[0];
   |         ^
lib/Numeric/Signal/signal-aux.c: In function ‘filter_double’:

lib/Numeric/Signal/signal-aux.c:75:10: error:
     warning: unused variable ‘K’ [-Wunused-variable]
       75 |   double K = k[0];
          |          ^
   |
75 |   double K = k[0];
   |          ^

lib/Numeric/Signal/signal-aux.c:74:10: error:
     warning: unused variable ‘L’ [-Wunused-variable]
       74 |   double L = l[0];
          |          ^
   |
74 |   double L = l[0];
   |          ^
lib/Numeric/Signal/signal-aux.c: In function ‘filter_float’:

lib/Numeric/Signal/signal-aux.c:99:9: error:
     warning: unused variable ‘K’ [-Wunused-variable]
       99 |   float K = k[0];
          |         ^
   |
99 |   float K = k[0];
   |         ^

lib/Numeric/Signal/signal-aux.c:98:9: error:
     warning: unused variable ‘L’ [-Wunused-variable]
       98 |   float L = l[0];
          |         ^
   |
98 |   float L = l[0];
   |         ^
